Modified markup for styling

--- a/index.html
+++ b/index.html
@@ -25,19 +25,27 @@
 
       <section class="hero">
         <div class="description">
-          <h1 class="title">Let us take YOU to a whole new universe.</h1>
+          <h1 class="title">
+            Let us take <strong style="color: #5650ac">YOU</strong> to a whole
+            new universe.
+          </h1>
           <p class="more-text">
             Our training sessions are guaranteed to take you to a whole new
             level.
           </p>
+
+          <div>
+            <button>GET STARTED</button>
+          </div>
         </div>
 
         <div class="illustration">
-          <img src="./svgs/Illustartion.svg" alt="A space suit" />
-        </div>
-
-        <div>
-          <button>GET STARTED</button>
+          <img
+            width="800"
+            height="800"
+            src="./svgs/Illustartion.svg"
+            alt="A space suit"
+          />
         </div>
       </section>
 
