--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="container">
       <nav class="nav-bar">
         <div class="logo">
-          <img src="./svgs/moonlikelogo.svg" alt="moonlike logo" />
+          <a href="index.html">
+            <img src="./svgs/moonlikelogo.svg" alt="moonlike logo"
+          /></a>
         </div>
 
         <div class="nav-list">
@@ -55,9 +57,14 @@
             <a href="#"
               ><img src="./svgs/facebook.svg" alt="Facebook logo"
             /></a>
+          </li>
+
+          <li class="footer-item">
             <a href="#">
               <img src="./svgs/twitter.svg" alt="Twitter logo" />
             </a>
+          </li>
+          <li class="footer-item">
             <a href="#">
               <img src="./svgs/play_store.svg" alt="Google Play logo" />
             </a>
